--- a/style/login.css
+++ b/style/login.css
@@ -6,38 +6,38 @@ body{
 }
 form{
   height: 70vh;
-  width: 30vw;
+  width: 30%;
   background: rgb(252, 252, 252);
   border-radius: 7%;
   margin:15vh 0 0 35vw;
 }
 .login_form input{
-  padding-left: 5vw;
-  height: 5vh;
-  width: 20vw;
+  padding-left: 20%;
+  height: 5.9vh;
+  width: 70%;
   border-radius: 3px;
-  border:0.5px solid lightgray;
-  margin:5vh 0 0 2vw;
+  border:1px solid lightgray;
+  margin:5vh 0 0 5%;
   outline:0;
 }
 .login_icon{
   height: 12vh;
-  width: 7vw;
-  margin:2vw 0 0 10vw;
+  width: 20%;
+  margin:2vw 0 0 35%;
 }
 .form_inputs .user{
   position: absolute;
-  left: 37vw;
-  top: 35.9vh;
-  height: 7.5vh;
-  width: 5vw;
+  left: 37%;
+  top: 37%;
+  height: 6%;
+  width: 4%;
 }
 .form_inputs .pwd{
   position: absolute;
-  left: 37.7vw;
-  top: 47.7vh;
-  height: 5vh;
-  width: 3.8vw;
+  left: 37%;
+  top: 48.5%;
+  height: 6%;
+  width: 4%;
 }
 .login_button{
   height: 8vh;
@@ -50,8 +50,49 @@ form{
   background: white;
   font-size: 1.8vw;
   -webkit-box-shadow: 1px 1px 15px -2px rgba(0,0,0,0.5);
-box-shadow: 1px 1px 15px -2px rgba(0,0,0,0.5);
+  box-shadow: 1px 1px 15px -2px rgba(0,0,0,0.5);
 }
 .forget_pwd{
   margin: 10vh 0 0 33%;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width:1000px) {
+  .form_inputs .user{
+    left: 29%;
+    top: 35.2%;
+  }
+  .form_inputs .pwd{
+    left: 29%;
+    top: 46.9%;
+  }
+  .login_button{
+    font-size: 3.5vw;
+  }
+  form{
+    width: 50%;
+    margin:15vh 0 0 25%;
+  }
+
+  .login_form input{
+    padding-left: 15%;
+  }
+
+  .forget_pwd{
+    margin: 10vh 0 0 35%;
+  }
+}
+@media only screen and (max-width:700px) {
+  .form_inputs .user{
+    left: 29%;
+    top: 34.4%;
+  }
+  .form_inputs .pwd{
+    left: 29%;
+    top: 46%;
+  }
+
+  .forget_pwd{
+    margin: 10vh 0 0 25%;
+  }
 }
