--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,21 @@
+
+@font-face { font-family: Desc_font; src: url('../Fonts/daxrili_wvrili.ttf'); }
+@font-face { font-family: contact_font; src: url('../Fonts/dzalian_bold.ttf'); }
+@font-face { font-family: contact_placeholder; src: url('../Fonts/bold.ttf'); }
+@font-face { font-family: contact_head; src: url('../Fonts/dzalian_bold.ttf'); }
+@font-face { font-family: postert_button; src: url('../Fonts/dzalian_bold.ttf'); }
+@font-face { font-family: location_font; src: url('../Fonts/superman.ttf'); }
+@font-face { font-family: header_font; src: url('../Fonts/dzalian_bold.ttf'); }
+/*
+  erti_zomis_gashlili_wierdo
+  daxrili_wvrili
+  bold
+  dzalian_bold
+  bold_politika
+  mkrtali_grdzeli
+  mkrtali_daxveuli
+  daxveuli
+ */
 html{scroll-behavior: smooth;}
   body{
     margin:0;
@@ -51,6 +69,7 @@ html{scroll-behavior: smooth;}
   }
 
 .Header{
+  font-family: 'header_font';
   background: #eee;
   color:#5B5B5B;
   z-index: 1;
@@ -130,6 +149,7 @@ html{scroll-behavior: smooth;}
     opacity: 0.9;
   }
   .Poster button{
+    font-family:'postert_button';
     width:8%;
     height: 7vh;
     margin:43vh 0 0 46%;
@@ -139,7 +159,7 @@ html{scroll-behavior: smooth;}
     outline:0;
     cursor: pointer;
     transition: 0.5s;
-    font-family: 'Aclonica';font-size: 22px;
+    font-size: 22px;
     color:#464646;
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
@@ -257,6 +277,7 @@ html{scroll-behavior: smooth;}
     text-align: center;
     font-size: 1.7vw;
     color:black;
+    font-family: 'location_font';
   }
   .Location iframe{
     width:80vw;
@@ -288,6 +309,7 @@ html{scroll-behavior: smooth;}
     font-size: 1.7vw;
     text-shadow: 3px 2px 0px rgba(0,0,0,0.2);
     transition: 1s;
+      font-family:'contact_head';
   }
   .Contact form:hover{
     -webkit-box-shadow: 6px 4px 10px 11px rgba(0,0,0,0.75);
@@ -295,6 +317,7 @@ html{scroll-behavior: smooth;}
     box-shadow: 6px 4px 10px 11px rgba(0,0,0,0.75);
   }
   .Contact button{
+    font-family:'contact_font';
     background-color: #343334;
     color:white;
     font-size: 1.6vw;
@@ -306,6 +329,7 @@ html{scroll-behavior: smooth;}
     transition: 4s;
   }
   .Contact input{
+    font-family: 'contact_placeholder';
     padding-left: 2%;
     border:0.5px solid #C6C0C0;
     margin:5% 0 5% 0 ;
@@ -314,10 +338,8 @@ html{scroll-behavior: smooth;}
     font-size:1vw;
     outline:0;
   }
-  .Contact::placeholder{
-    color:#eee;
-  }
   .Contact textarea{
+    font-family: 'contact_placeholder';
     padding-left: 2%;
     margin:5% 0 0 0 ;
     font-size: 1vw;
@@ -346,6 +368,9 @@ html{scroll-behavior: smooth;}
     margin-top:5vh;
     float: left;
     text-align: center;
+  }
+  .desc-text p{
+      font-family:'Desc_font';
   }
 
 .Footer{
