--- a/admin.css
+++ b/admin.css
@@ -859,9 +859,22 @@ body{
     }
 
 /* INBOX */
+    .inbox-header{
+      font-family: "Sofia";
+      font-size:2.3vw;
+      position: sticky;
+      color:white;
+      top:0;
+      z-index: 10;
+      height:10vh;
+      width:100%;
+      text-align: center;
+      background:#595959;
+    }
     .chat_list{
       font-family: "Sofia";
       position: relative;
+      top:0;
       overflow: scroll;
       float:right;
       background-color: #fff;
@@ -883,6 +896,7 @@ body{
       cursor: pointer;
       transition: 0.5s;
       border-bottom: 3px solid #2196F3;
+      border-top: 6px solid #2196F3;
       float:right;
     }
     .inbox:hover{
@@ -981,98 +995,64 @@ body{
       border-radius: 3px;
       outline:0;
     }
+
+
   /* accounts */
-    .account_list{
-      position: relative;
-      float:right;
-      height: 100vh;
-      width: 25%;
-        outline:0;
-        border:0;
-      background-color: white;
-    }
-    .account_list button{
-      width: 100%;
-      height: 8vh;
-    }
+  .account-list::-webkit-scrollbar{display: none;}
+    .account-list{
+        position: relative;
+        float:left;
+        overflow: scroll;
+        height:92vh;
+        width: 25%;
+        text-align: center;
+        background-color: white;
+      }
+    .account-list-header{
+      display: table;
+      font-size:1.5vw;
+      width:100%;
+      height: 4vh;
+      background: #eee;
+      position: sticky;
+      top:0;
 
-    .account_but_input{
-      height: 40vw;
-      float:left;
-      width: 75%;
-      text-align: center;
-
     }
-    .account_but_input input{outline:0;  border:0;
-      -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
-      -moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
-      box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);}
-    .account_but_input button{
-      transition: 1s;
+    .account-list p{font-size:1.3vw;color:#333;}
+    .account_list input[type="checkbox"]{
       outline:0;
       border:0;
-      margin-top: 5vh;
-      border-radius: 20px;
-      width: 17%;
+    }
+    .account-list span{}
+    .account-list-button{
+      float:right;
+      width: 25%;
       height: 8vh;
     }
-    .account_but_input h4{
-      color:#333;
-      margin-top: 4vh;
+
+    /* modify */
+    .modify-account{
+      color:#2196F3;
+      font-family: "Sofia";
+      text-align: center;
+      float:left;
+      width:75%;
+      height:100vh;
     }
-    .account_but_input input{
-      outline:0;
-      border-radius: 10px;
-      width: 40%;
-      height: 8vh;
-    }
-    .usernames{
-      margin-top: 2vh;
-    }
-    .usernames li {
-      width: 18vw;
-      height: 7vh;
-      right:2vw;
-      list-style: none;
-      position: relative;
-      border-bottom: 1px solid #CECECE;
-    }
-    .usernames li:last-child{
-      border-bottom: none;
-    }
-    .usernames li label{
-      margin-left: 5vw;
-      font-size:2vw;
-      cursor:pointer;
-    }
-    .usernames li label input{
-      opacity: 0;
-      cursor:pointer;
-    }
-    .usernames li label .check{
-      position: absolute;
-      top:1.5vh;
-      left: 1vw;
-      width: 1.5vw;
-      height: 1.5vw;
-      background:#C5C5C5;
+    .modify-account input::placeholder{color:#eee; }
+    .modify-account input{
+      color:white;
+      background-color:#2196F3;
       display: block;
-      box-sizing: border-box;
       border-radius: 5px;
+      border:0;
+      outline:0;
+      padding-left: 3%;
+      width:35%;
+      height:7vh;
+      margin:3% 0 5% 32.5%;
     }
-    .usernames li label .check:before{
-      content: '';
-      position: absolute;
-      top:3px;
-      left:3px;
-      right:3px;
-      bottom:3px;
-      border-radius: 5px;
-      transition: 0.5s;
-      transform: translateX(15vw);
-    }
-    .usernames li label input:checked ~ .check:before{
-      background: #2196F3;
-      transform: translateX(0);
-    }
+    .modify-account{}
+    .modify-account button{font-size:1.5vw;letter-spacing: 3px;}
+
 /*  */
