--- a/Fonts/TTFs/fonts.css
+++ b/Fonts/TTFs/fonts.css
@@ -5,5 +5,6 @@
 @font-face { font-family: pro_gallery_font; src: url('Fonts/mkrtali_daxveuli.ttf'); }
 @font-face { font-family: location_button; src: url('Fonts/bold_politika.ttf'); }
 @font-face { font-family: location_input; src: url('Fonts/daxrili_wvrili.ttf'); }
-@font-face { font-family: Desc_font; src: url('../Fonts/superman.ttf'); }
+@font-face { font-family: superman; src: url('superman.ttf'); }
 @font-face { font-family: category_font; src: url('../Fonts/erti_zomis_gashlili_wierdo.ttf'); }
+@font-face { font-family: category_font; src: url('sofia.ttf'); }
