--- a/style/test_prod.css
+++ b/style/test_prod.css
@@ -1,15 +1,4 @@
 
-@font-face { font-family: erti_zomis_gashlili_wierdo; src: url('../Fonts/erti_zomis_gashlili_wierdo.ttf'); }
-@font-face { font-family: daxrili_wvrili; src: url('../Fonts/daxrili_wvrili.ttf'); }
-@font-face { font-family: bold_politika; src: url('../Fonts/bold_politika.ttf'); }
-@font-face { font-family: bold_geo; src: url('../Fonts/bold.ttf'); }
-@font-face { font-family: dzalian_bold; src: url('../Fonts/dzalian_bold.ttf'); }
-@font-face { font-family: mkrtali_grdzeli; src: url('../Fonts/mkrtali_grdzeli.ttf'); }
-@font-face { font-family: mkrtali_daxveuli; src: url('../Fonts/mkrtali_daxveuli.ttf'); }
-@font-face { font-family: daxveuli; src: url('../Fonts/daxveuli.ttf'); }
-@font-face { font-family: superman; src: url('../Fonts/superman.ttf'); }
-@font-face { font-family: test; src: url('../Fonts/vazi.ttf'); }
-
 /* FILTER  */
 #side_menu{
   /* background-color: #F7F7F7; */
@@ -22,7 +11,7 @@
   font-size: 1.6vw;
 }
 #side_menu select,#side_menu input, #side_menu button{
-    font-family: 'daxrili_wvrili';
+    font-family: 'mkrtali_daxveuli';
     background-color: #eee;
     /* background-color: #434343; */
     padding-left: 3%;
@@ -40,6 +29,8 @@
 #side_menu input[type="number"]{width:30%;font-size:1.4vw;}
 #side_menu button:hover{background-color:#333;color:#fff;transition: 1s;}
 #side_menu button{
+  font-size: 1.4vw;
+  width: 65%;
   background-color: green;
   color:white;
   cursor: pointer;
